syntax = "proto3";

option java_multiple_files=false;

option java_package = "com.jx.message";
option java_outer_classname = "GameMsg";

import "Options.proto";

message LoginReq{
  option (msgId) = 1001;
  string token = 1;
}

message LoginResp{
  option (msgId) = 1002;
  string token = 1;
  string otherInfo = 2;
}

message ReconnectReq{
  option (msgId) = 1003;
  string token = 1;
}

message ReconnectResp{
  option (msgId) = 1004;
  string token = 1;
  int64 serverTime = 2;
}